fix(note): Add spacing inside the content

--- a/src/_sass/components/_note.scss
+++ b/src/_sass/components/_note.scss
@@ -26,8 +26,12 @@
   }
 
   &__text {
-    & > * {
+    & > p:first-of-type {
       display: inline;
+    }
+
+    & > * + * {
+      margin-top: 25px;
     }
   }
 
